# study

./: README.md
c++/: .vimspector.json
c++/algorithm/opengl/: CMakeLists.txt  main.cpp
c++/algorithm/opengl/.cache/clangd/index/: imconfig.h.E93F60A5B2354301.idx  imgui.cpp.274AA41190D6C24E.idx  imgui.h.F430C40CF240E5CA.idx  imgui_demo.cpp.FAADB49DA5A23493.idx  imgui_draw.cpp.F046199EC7940EB8.idx  imgui_impl_glfw.cpp.601C94F02A9B14F0.idx  imgui_impl_glfw.h.2E15DAEEE4854F24.idx  imgui_impl_opengl3.cpp.E37F963AF21C6E1A.idx  imgui_impl_opengl3.h.CA6AE164907159DC.idx  imgui_impl_opengl3_loader.h.9966897DAE2C3DFD.idx  imgui_internal.h.834D978D240254D7.idx  imgui_tables.cpp.35FA4BDACA8D8145.idx  imgui_widgets.cpp.4C2B5AD4BCD7A506.idx  imstb_rectpack.h.3F981334342A19F3.idx  imstb_textedit.h.6F0FB680B870963E.idx  imstb_truetype.h.1B5BF27BD0D2C90A.idx  main.cpp.F67AEE0FE2EAC8DF.idx
c++/demo/car_demo/: CMakeLists.txt  README.md  auto.sh  revice.ino
c++/demo/car_demo/.cache/clangd/index/: detector.hpp.09DDCFACA567C84B.idx  main.cpp.53CBE1D718020CFA.idx  read_config.hpp.D27BADA22A6ACB6B.idx  road.hpp.64224ACE44B0F8B1.idx  serial.hpp.2F78378BD40255D3.idx
c++/demo/car_demo/config/: config.yaml
c++/demo/car_demo/include/detector/: detector.hpp  road.hpp
c++/demo/car_demo/include/read_config/: read_config.hpp
c++/demo/car_demo/include/serial/: serial.hpp
c++/demo/car_demo/src/: main.cpp
c++/design/: PImpl.cpp  conanfile.txt  conanfile_bak.txt  event_manger.hpp  publishser.hpp
c++/language/: 标点.cpp  标识符.cpp
c++/myhead_file/: myfmt.hpp
lua/: test1.lua
(+77 files in other folders)
